<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/ButtonReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonReg"
        android:background="@drawable/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneReg" />

    <EditText
        android:id="@+id/LoginReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/LoginReg"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PasswordReg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/PasswordReg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/PasswordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/PasswordReg"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/RePasswordReg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/RePasswordReg"
        app:layout_constraintTop_toBottomOf="@+id/LoginReg"
        android:background="@drawable/edit"
        app:layout_constraintVertical_bias="0.054" />

    <EditText
        android:id="@+id/RePasswordReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/RePasswordReg"
        android:ems="10"
        android:background="@drawable/edit"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/EmailReg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/EmailReg"
        app:layout_constraintTop_toBottomOf="@+id/PasswordReg"
        app:layout_constraintVertical_bias="0.094" />

    <EditText
        android:id="@+id/EmailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/EmailReg"
        android:ems="10"
        android:background="@drawable/edit"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PhoneReg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/PhoneReg"
        app:layout_constraintTop_toBottomOf="@+id/RePasswordReg"
        app:layout_constraintVertical_bias="0.134" />

    <EditText
        android:id="@+id/PhoneReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit"
        android:hint="@string/PhoneReg"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ButtonReg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/ButtonReg"
        app:layout_constraintTop_toBottomOf="@+id/EmailReg"
        app:layout_constraintVertical_bias="0.136" />
</androidx.constraintlayout.widget.ConstraintLayout>